--- a/assets/css/popup.css
+++ b/assets/css/popup.css
@@ -463,6 +463,28 @@
 .credifana .realtor-property-details #pills-tabContent #pills-property-details .property-details-wrapper #property-api-data {
   display: none;
 }
+.credifana .realtor-property-details #pills-tabContent #pills-property-details .property-details-wrapper #property-api-data .bed_bath_container {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  margin-bottom: 10px;
+  overflow-x: scroll;
+}
+.credifana .realtor-property-details #pills-tabContent #pills-property-details .property-details-wrapper #property-api-data .bed_bath_container::-webkit-scrollbar {
+  height: 10px;
+}
+.credifana .realtor-property-details #pills-tabContent #pills-property-details .property-details-wrapper #property-api-data .bed_bath_container .extra_bedroom_bathroom {
+  margin: 10px;
+  background-color: #ffffff;
+  border-radius: 6px;
+  box-shadow: 0px 0px 6px rgba(0, 0, 0, 0.16);
+  height: 83px;
+  min-width: 175px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
+}
 .credifana .realtor-property-details #pills-tabContent #pills-property-details .property-details-wrapper #property-api-data .property-city-state {
   margin-bottom: 20px;
 }
