--- a/assets/css/popup.css
+++ b/assets/css/popup.css
@@ -137,17 +137,17 @@
   background-color: #241F1F;
   color: #ffffff;
 }
-.credifana .credifanaLogin .loginForm .registerFormLink {
+.credifana .credifanaLogin .loginForm .registerFormLink, .credifana .credifanaLogin .loginForm .ForgotPasswordLink {
   text-align: center;
 }
-.credifana .credifanaLogin .loginForm .registerFormLink .text {
+.credifana .credifanaLogin .loginForm .registerFormLink .text, .credifana .credifanaLogin .loginForm .ForgotPasswordLink .text {
   font-family: "Raleway", sans-serif;
   font-size: 16px;
   font-weight: normal;
   line-height: 19px;
   color: #241F1F;
 }
-.credifana .credifanaLogin .loginForm .registerFormLink .text .registerLink {
+.credifana .credifanaLogin .loginForm .registerFormLink .text .registerLink, .credifana .credifanaLogin .loginForm .registerFormLink .text .forgotLink, .credifana .credifanaLogin .loginForm .ForgotPasswordLink .text .registerLink, .credifana .credifanaLogin .loginForm .ForgotPasswordLink .text .forgotLink {
   font-family: "Raleway", sans-serif;
   font-size: 15px;
   font-weight: 900;
@@ -861,29 +861,6 @@
   height: 50px;
 }
 
-.up_arrow, .down_arrow {
-  cursor: pointer;
-  box-shadow: 0px 0px 10px 0px #748eff;
-  border-radius: 50%;
-  height: 25px;
-  width: 25px;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-}
-
-.up_arrow, .down_arrow, .arrow_container, #bed_button_container {
-  margin: 0!important;
-} 
-/* #details_container_with_arrow {
-  position: relative;
-}
-
-.arrow_container {
-  position: absolute;
-  top: 50%;
-  right: 0;
-} */
 /* / scrollbar style end here / */
 
 /*# sourceMappingURL=popup.css.map */
