--- a/assets/scss/_popup.scss
+++ b/assets/scss/_popup.scss
@@ -285,6 +285,27 @@
                                 display: flex;
                                 margin-bottom: 16px;
                                 justify-content: space-between;
+                                .bathrooms{
+                                    #bed_button_container{
+                                        margin: 0px;
+                                        .arrow_container{
+                                            position: relative;
+                                            margin: 0px;
+                                            div{
+                                                height: 30px;
+                                                width: 30px;
+                                                background-color: white;
+                                                border-radius: 50%;
+                                                text-align: center;
+                                                margin: 0px;
+                                                box-shadow: 0px 0px 10px 0px #748EFF;
+                                                position: absolute;
+                                                right: 0;
+                                                top: -20px;
+                                            }
+                                        }
+                                    }
+                                }
                                 &:last-child{
                                     margin-bottom: 30px;
                                 }
@@ -336,7 +357,7 @@
                             align-items: center;
                             justify-content: space-between;
                             margin-bottom: 10px;
-                            overflow-x: scroll;
+                            overflow-x: auto;
                             
                             &::-webkit-scrollbar {
                                 height: 10px;
