Azim cache storing code

--- a/assets/scss/_popup.scss
+++ b/assets/scss/_popup.scss
@@ -300,7 +300,7 @@
                                                 margin: 0px;
                                                 box-shadow: 0px 0px 10px 0px #748EFF;
                                                 position: absolute;
-                                                right: 0;
+                                                right: 5px;
                                                 top: -20px;
                                             }
                                         }
