--- a/assets/css/popup.css
+++ b/assets/css/popup.css
@@ -444,7 +444,7 @@
   margin: 0px;
   box-shadow: 0px 0px 10px 0px #748EFF;
   position: absolute;
-  right: 0;
+  right: 5px;
   top: -20px;
 }
 .credifana .realtor-property-details #pills-tabContent #pills-property-details .property-details-wrapper #property_details .details-container:last-child {
