--- a/assets/css/popup.css
+++ b/assets/css/popup.css
@@ -498,18 +498,20 @@
 }
 .credifana .realtor-property-details #pills-tabContent #pills-property-details .property-details-wrapper #property-api-data .bed_bath_container::-webkit-scrollbar {
   height: 10px;
+  width: 100%;
 }
 .credifana .realtor-property-details #pills-tabContent #pills-property-details .property-details-wrapper #property-api-data .bed_bath_container .extra_bedroom_bathroom {
   margin: 10px;
+  padding: 5px;
   background-color: #ffffff;
   border-radius: 6px;
   box-shadow: 0px 0px 6px rgba(0, 0, 0, 0.16);
   height: 83px;
-  min-width: 175px;
+  min-width: 200px;
   display: flex;
-  align-items: center;
   justify-content: center;
   flex-direction: column;
+  cursor: pointer;
 }
 .credifana .realtor-property-details #pills-tabContent #pills-property-details .property-details-wrapper #property-api-data .property-city-state {
   margin-bottom: 20px;
@@ -858,6 +860,11 @@
   color: #9D0000;
   margin-top: 6px;
   margin-bottom: 10px;
+}
+
+.active_box {
+  background-color: rgb(55, 78, 180) !important;
+  color: white;
 }
 
 #property_details em {
