--- a/assets/css/popup.css
+++ b/assets/css/popup.css
@@ -564,6 +564,7 @@
 .credifana .realtor-property-details #pills-tabContent #pills-property-details .property-details-wrapper #property-api-data .increase-rate-container-heading {
   height: auto;
   width: auto;
+  text-align: center;
   display: block;
   margin-bottom: 10px;
   padding: 5px;
@@ -571,23 +572,36 @@
   font-size: 14px;
   font-family: "Raleway", sans-serif;
 }
-.credifana .realtor-property-details #pills-tabContent #pills-property-details .property-details-wrapper #property-api-data .api-data .data-container {
+.credifana .realtor-property-details #pills-tabContent #pills-property-details .property-details-wrapper #property-api-data .increase-rate-container-heading h2 {
+  font-family: "Raleway", sans-serif;
+  font-weight: 900;
+  font-size: 16px;
+  line-height: 19px;
+  color: #241F1F;
+  margin-top: 10px;
+  margin-bottom: 0;
+  font-size: 22px;
+}
+.credifana .realtor-property-details #pills-tabContent #pills-property-details .property-details-wrapper #property-api-data .api-data .all-data-container {
   display: flex;
+  flex-wrap: wrap;
   align-items: center;
   justify-content: space-between;
+}
+.credifana .realtor-property-details #pills-tabContent #pills-property-details .property-details-wrapper #property-api-data .api-data .all-data-container div {
   margin-bottom: 10px;
 }
-.credifana .realtor-property-details #pills-tabContent #pills-property-details .property-details-wrapper #property-api-data .api-data .data-container .api-average-rent button {
+.credifana .realtor-property-details #pills-tabContent #pills-property-details .property-details-wrapper #property-api-data .api-data .all-data-container .api-average-rent button {
   border: 1px solid #748EFF;
   border-radius: 6px;
 }
-.credifana .realtor-property-details #pills-tabContent #pills-property-details .property-details-wrapper #property-api-data .api-data .data-container .api-maintenance {
+.credifana .realtor-property-details #pills-tabContent #pills-property-details .property-details-wrapper #property-api-data .api-data .all-data-container .api-maintenance {
   background-color: #748EFF;
 }
-.credifana .realtor-property-details #pills-tabContent #pills-property-details .property-details-wrapper #property-api-data .api-data .data-container .api-maintenance span {
+.credifana .realtor-property-details #pills-tabContent #pills-property-details .property-details-wrapper #property-api-data .api-data .all-data-container .api-maintenance span {
   color: #ffffff !important;
 }
-.credifana .realtor-property-details #pills-tabContent #pills-property-details .property-details-wrapper #property-api-data .api-data .data-container div {
+.credifana .realtor-property-details #pills-tabContent #pills-property-details .property-details-wrapper #property-api-data .api-data .all-data-container div {
   background-color: #ffffff;
   border-radius: 6px;
   box-shadow: 0px 0px 6px rgba(0, 0, 0, 0.16);
@@ -598,35 +612,35 @@
   justify-content: center;
   flex-direction: column;
 }
-.credifana .realtor-property-details #pills-tabContent #pills-property-details .property-details-wrapper #property-api-data .api-data .data-container div button {
+.credifana .realtor-property-details #pills-tabContent #pills-property-details .property-details-wrapper #property-api-data .api-data .all-data-container div button {
   display: block;
   background-color: transparent;
   border: none;
   height: 100%;
   width: 100%;
 }
-.credifana .realtor-property-details #pills-tabContent #pills-property-details .property-details-wrapper #property-api-data .api-data .data-container div span:first-child, .credifana .realtor-property-details #pills-tabContent #pills-property-details .property-details-wrapper #property-api-data .api-data .data-container div span#unit_count_highest:first-child, .credifana .realtor-property-details #pills-tabContent #pills-property-details .property-details-wrapper #property-api-data .api-data .data-container div span#unit_count_average:first-child {
+.credifana .realtor-property-details #pills-tabContent #pills-property-details .property-details-wrapper #property-api-data .api-data .all-data-container div span:first-child, .credifana .realtor-property-details #pills-tabContent #pills-property-details .property-details-wrapper #property-api-data .api-data .all-data-container div span#unit_count_highest:first-child, .credifana .realtor-property-details #pills-tabContent #pills-property-details .property-details-wrapper #property-api-data .api-data .all-data-container div span#unit_count_average:first-child {
   font-size: 14px;
   line-height: 16px;
   font-weight: normal;
   font-family: "Raleway", sans-serif;
   color: #241F1F;
 }
-.credifana .realtor-property-details #pills-tabContent #pills-property-details .property-details-wrapper #property-api-data .api-data .data-container div span:first-child span, .credifana .realtor-property-details #pills-tabContent #pills-property-details .property-details-wrapper #property-api-data .api-data .data-container div span#unit_count_highest:first-child span, .credifana .realtor-property-details #pills-tabContent #pills-property-details .property-details-wrapper #property-api-data .api-data .data-container div span#unit_count_average:first-child span {
+.credifana .realtor-property-details #pills-tabContent #pills-property-details .property-details-wrapper #property-api-data .api-data .all-data-container div span:first-child span, .credifana .realtor-property-details #pills-tabContent #pills-property-details .property-details-wrapper #property-api-data .api-data .all-data-container div span#unit_count_highest:first-child span, .credifana .realtor-property-details #pills-tabContent #pills-property-details .property-details-wrapper #property-api-data .api-data .all-data-container div span#unit_count_average:first-child span {
   font-size: 14px;
   line-height: 16px;
   font-weight: normal;
   font-family: "Raleway", sans-serif;
   color: #241F1F;
 }
-.credifana .realtor-property-details #pills-tabContent #pills-property-details .property-details-wrapper #property-api-data .api-data .data-container div span:last-child, .credifana .realtor-property-details #pills-tabContent #pills-property-details .property-details-wrapper #property-api-data .api-data .data-container div span#unit_count_highest:last-child, .credifana .realtor-property-details #pills-tabContent #pills-property-details .property-details-wrapper #property-api-data .api-data .data-container div span#unit_count_average:last-child {
+.credifana .realtor-property-details #pills-tabContent #pills-property-details .property-details-wrapper #property-api-data .api-data .all-data-container div span:last-child, .credifana .realtor-property-details #pills-tabContent #pills-property-details .property-details-wrapper #property-api-data .api-data .all-data-container div span#unit_count_highest:last-child, .credifana .realtor-property-details #pills-tabContent #pills-property-details .property-details-wrapper #property-api-data .api-data .all-data-container div span#unit_count_average:last-child {
   font-family: "Raleway", sans-serif;
   font-size: 22px;
   font-weight: 700;
   line-height: 29px;
   color: #241F1F;
 }
-.credifana .realtor-property-details #pills-tabContent #pills-property-details .property-details-wrapper #property-api-data .api-data .data-container div span:last-child a, .credifana .realtor-property-details #pills-tabContent #pills-property-details .property-details-wrapper #property-api-data .api-data .data-container div span#unit_count_highest:last-child a, .credifana .realtor-property-details #pills-tabContent #pills-property-details .property-details-wrapper #property-api-data .api-data .data-container div span#unit_count_average:last-child a {
+.credifana .realtor-property-details #pills-tabContent #pills-property-details .property-details-wrapper #property-api-data .api-data .all-data-container div span:last-child a, .credifana .realtor-property-details #pills-tabContent #pills-property-details .property-details-wrapper #property-api-data .api-data .all-data-container div span#unit_count_highest:last-child a, .credifana .realtor-property-details #pills-tabContent #pills-property-details .property-details-wrapper #property-api-data .api-data .all-data-container div span#unit_count_average:last-child a {
   color: #241F1F;
   text-decoration: none;
 }
@@ -868,9 +882,8 @@
   margin-bottom: 5px;
   text-decoration: none;
 }
-
-#details_container_with_arrow {
-  margin-bottom: 0 !important;
+#subscribe_link .full-access, #select_average_highest .full-access {
+  display: block;
 }
 
 .error-message {
