--- a/assets/css/popup.css
+++ b/assets/css/popup.css
@@ -329,6 +329,15 @@
   line-height: 19px;
   font-size: 16px;
 }
+.credifana .realtor-site-screen .site-message img {
+  max-width: 100%;
+  padding: 10px;
+  margin-top: 10px;
+  display: inline-block;
+  box-shadow: 0px 0px 20px #748eff;
+  overflow: hidden;
+  border-radius: 20px;
+}
 .credifana .realtor-property-details {
   display: none;
   overflow: auto;
