--- a/assets/scss/_popup.scss
+++ b/assets/scss/_popup.scss
@@ -211,6 +211,15 @@
             span{
                 @include commonSubHeaderInfo;
             }
+            img{
+                max-width: 100%;
+                padding: 10px;
+                margin-top: 10px;
+                display: inline-block;
+                box-shadow: 0px 0px 20px #748eff;
+                overflow: hidden;
+                border-radius: 20px;
+            }
         }
     }
     .realtor-property-details{
