--- a/assets/scss/_mixins.scss
+++ b/assets/scss/_mixins.scss
@@ -132,7 +132,7 @@
     background-color: $White;
     border-radius: 6px;
     box-shadow: 0px 0px 6px rgba(#000000, 16%);
-    height: 110px;
+    height: 130px;
     width: 175px;
     display: flex;
     align-items: center;
@@ -176,14 +176,15 @@
     margin-bottom: 10px;
 }
 @mixin info{
-    background-color: #748EFF;
+    background-color: #241F1F;
     color: white !important;
-    height: 20px;
-    width: 20px;
+    height: 15px;
+    width: 15px;
     border-radius: 50%;
     display: flex;
     justify-content: center;
     align-items: center;
     font-weight: bold !important;
     cursor: pointer;
+    font-size: 12px !important;
 }
