--- a/assets/scss/_popup.scss
+++ b/assets/scss/_popup.scss
@@ -224,7 +224,6 @@
     }
     .realtor-property-details{
         display: none;
-        overflow: auto;
         padding: 5px;
         #pills-tab{
             display: flex;
@@ -335,6 +334,7 @@
                                         margin-right: 16px;
                                     }
                                     div{
+                                        position: relative;
                                         margin-top: 5px;
                                         input{
                                             width: 177px;
@@ -344,6 +344,32 @@
                                         }
                                         select{
                                             width: 177px;
+                                        }
+                                        .info{
+                                            &:hover + .info-detail{
+                                                visibility: visible !important;
+                                                opacity: 1 !important;
+                                            }
+                                        }
+                                        .info-detail{
+                                            position: absolute;
+                                            top: 30px;
+                                            border-radius: 0.375rem;
+                                            width: 177px;
+                                            height: auto;
+                                            box-shadow: 0px 0px 5px 0px grey;
+                                            background-color: white;
+                                            padding: 20px;
+                                            opacity: 0;
+                                            visibility: hidden;
+                                            transition: all 0.5s;
+                                            z-index: 1;
+                                            svg{
+                                                position: absolute;
+                                                top: 3px;
+                                                right: 3px;
+                                                cursor: pointer;
+                                            }
                                         }
                                     }
                                 }
@@ -468,9 +494,44 @@
                                 align-items: center;
                                 justify-content: space-between;
                                 div {
+                                position: relative;
                                     margin-bottom: 10px;
                                     .info{
                                         @include info;
+                                        position: absolute;
+                                        top: 3px;
+                                        left: 3px;
+                                        &:hover ~ .info-detail{
+                                            visibility: visible !important;
+                                            opacity: 1 !important;
+                                        }
+                                    }
+                                    button{
+                                        position: relative !important;
+                                    }
+                                    .info-detail{
+                                        position: absolute;
+                                        top: 30px;
+                                        border-radius: 0.375rem;
+                                        width: 100%;
+                                        height: auto;
+                                        box-shadow: 0px 0px 5px 0px grey;
+                                        background-color: white;
+                                        padding: 20px;
+                                        opacity: 0;
+                                        visibility: hidden;
+                                        transition: all 0.5s;
+                                        z-index: 1;
+                                        font-size: 16px !important;
+                                        left: 0;
+                                        font-weight: normal !important;
+                                        color: #241F1F !important; 
+                                        svg{
+                                            position: absolute;
+                                            top: 3px;
+                                            right: 3px;
+                                            cursor: pointer;
+                                        }
                                     }
                                 }
                                 .api-average-rent{
@@ -484,15 +545,10 @@
                                 }
                                 .api-maintenance{
                                     background-color: $LightSkyBlue;
-                                    span{
+                                    span:not(.info-detail ){
                                         color: $White !important;
                                     }
-                                    .info{
-                                        background-color: white;
-                                        color: #241F1F !important;
-                                    }
                                 }
-                               
                                 div{
                                     button{
                                         display: block;
@@ -509,13 +565,19 @@
                                                 @include apiDataBlockTitle;
                                             }
                                         }
-                                        &:last-child{
+                                        &:nth-child(3),&:last-child,.prop-data{
                                             @include apiDataPrice;
                                             a{
                                                 color: $Black;
                                                 text-decoration: none;
                                             }
                                         }
+                                    }
+                                    .api-data-title{
+                                        @include apiDataBlockTitle;
+                                    }
+                                    .api-data-value{
+                                        @include apiDataPrice;
                                     }
                                 }
                             }
